hphp/test/zend/good/error_008.php.exp
HipHop Fatal error: foo cannot implement abc - it is not an interface in hphp/test/zend/good/error_008.php on line 5
